{
    "name": "PlrInputActions",
    "maps": [
        {
            "name": "Plr",
            "id": "66735467-f1d0-4f92-ac51-3ed54e4c0b63",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "c37ef9ab-2e93-48f9-82c9-5c3cd8454f18",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "e53c18e1-7a4c-4f80-86e3-65c3286d935f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c482094b-b36c-4349-b44b-6757abdbe7f4",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a8901d67-114e-46b9-a0c1-07ff3f1b1629",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1369a7a3-2319-4337-b43c-3829bd0a3fcc",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d0e3792a-25b6-4e95-aeae-8f91773b4eda",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}